# octodns-etcd

./: .gitignore  LICENSE  README.md  pyproject.toml
src/octodns_etcd/: __init__.py  client.py  model.py  provider.py
tests/: conftest.py  test_integration.py  test_provider_apply.py  test_provider_populate.py
