[project]
name = "octodns-etcd"
version = "0.1.0"
description = "OctoDNS provider for etcd (SkyDNS format) for CoreDNS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "octodns>=1.0",
    "etcd3>=0.2",
    "natsort>=5.5.0",
    "pydantic>=2",
    "protobuf>=3.20,<4",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: Name Service (DNS)",
]

[project.urls]
Homepage = "https://github.com/eudika/octodns-etcd"
Repository = "https://github.com/eudika/octodns-etcd"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/octodns_etcd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning:etcd3.",
    "ignore::DeprecationWarning:google.protobuf.",
]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
